--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta charset="UTF-8" />
       <link rel="icon"
             type="image/svg+xml"
-            href="/assets/favicon.17e50649.svg" />
+            href="/assets/favicon.0155462c.ico" />
       <link rel="preconnect"
             href="https://fonts.googleapis.com">
       <link rel="preconnect"
@@ -20,9 +20,9 @@
       <meta id="extViewportMeta"
             name="viewport"
             content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
-      <title>Vite App</title>
-  <script type="module" crossorigin src="/assets/index.447d611f.js"></script>
-  <link rel="stylesheet" href="/assets/index.c240409a.css">
+      <title>Paula și Andrei - 8 octombrie 2022</title>
+  <script type="module" crossorigin src="/assets/index.1d8dba0a.js"></script>
+  <link rel="stylesheet" href="/assets/index.35f3f204.css">
 </head>
 
 <body>
